leave the spaces created by error msg where they are to avoid unsightly jumping about

--- a/web/css/core.scss
+++ b/web/css/core.scss
@@ -57,6 +57,10 @@ $map_width: 500px;
         text-align: left;
     }
 
+    div.label-valid {
+        background-color: white;
+    }
+
     div.form-field {
         clear: both;
     }
